# vehicle_gateway

./: .gitignore  BETAFLIGHT_README.md  Dockerfile  README.md  build_gazebo_from_source.md  dependencies.repos  docker-compose.yml  gazebo.repos
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
Docker/: Dockerfile
Docker/dev/: Dockerfile  entrypoint.sh
Docker/duckietown/: Dockerfile.gz-garden-bridge  Dockerfile.ros2-ros1-bridge  bridge.yml  bridge.yml.j2  entrypoint.sh  fastdds_no_shared_memory.xml  gazebo-bridge-config.yaml  gazebo-bridge-config.yaml.j2  gazebo-bridge-replacer.py  ros-bridge-replacer.py
Docker/nvidia_jetson/: Dockerfile
_images/: betaflight-simulation.drawio
betaflight_configurator/: CMakeLists.txt  package.xml
betaflight_configurator/cmake/: 99_betaflight_configurator_setup.sh.in
betaflight_controller/: CMakeLists.txt  package.xml
betaflight_controller/src/: SocketBetaflight.cpp  SocketBetaflight.hpp  main.cpp
betaflight_demo/: CMakeLists.txt  package.xml
betaflight_demo/launch/: betaflight_demo.launch.py
betaflight_demo/src/: altitude_control.cpp
betaflight_gazebo/: CMakeLists.txt  package.xml
betaflight_gazebo/include/betaflight_gazebo/: BetaflightPlugin.hpp  BetaflightSocket.hpp  Util.hpp
betaflight_gazebo/src/: BetaflightPlugin.cpp  BetaflightSocket.cpp  Util.cpp
betaflight_sim/: CMakeLists.txt  README.md  package.xml
betaflight_sim/cmake/: 99_betaflight_setup.sh.in
betaflight_sim/launch/: quadcopter.launch.py  quadcopter_joystick.launch.py
betaflight_sim/models/iris_with_ardupilot/: model.sdf
betaflight_sim/models/iris_with_standoffs/: model.sdf
betaflight_sim/models/runway/meshes/: airfield.dae
betaflight_sim/patches/: sitl.patch  target.cc.patch  target.hh.patch  tools.mk.patch  udp.cc.patch
betaflight_sim/worlds/: empty_betaflight_world.sdf
gz_aerial_plugins/: CMakeLists.txt  package.xml
gz_aerial_plugins/src/: AttitudeWidget.qml  CompassWidget.qml  DroneHmi.config  DroneHmi.cpp  DroneHmi.hpp  DroneHmi.qml  DroneHmi.qrc
px4_sim/: CMakeLists.txt  README.md  dds_topics.yaml  package.xml
px4_sim/airframes/: 1030_plane  1040_standard_vtol
px4_sim/cmake/: 99_px4_setup.sh.in
px4_sim/config/: multi.yaml  two_isolated.yaml
px4_sim/custom_files/: dds_topics.yaml
px4_sim/launch/: plane.launch.py  px4_sim.launch.py  px4_sim_multi.launch.py  px4_sim_new.launch.py  standard_vtol.launch.py  x500_launch.py  x500_null_island.launch.py
px4_sim/models/plane/: model.sdf
px4_sim/models/standard_vtol/: model.sdf
px4_sim/patches/: GzBridge.cpp.patch  GzBridge.hpp.patch
px4_sim/worlds/: empty_px4_world.sdf  null_island.sdf
qgroundcontrol/: CMakeLists.txt  package.xml
vehicle_gateway/: CMakeLists.txt  package.xml
vehicle_gateway/include/vehicle_gateway/: vehicle_gateway.hpp
vehicle_gateway/launch/: px4.launch.xml
vehicle_gateway/src/: vehicle_gateway_node.cpp
vehicle_gateway_betaflight/: CMakeLists.txt  README.md  package.xml  plugins.xml
vehicle_gateway_betaflight/include/vehicle_gateway_betaflight/: vehicle_gateway_betaflight.hpp
vehicle_gateway_betaflight/src/: vehicle_gateway_betaflight.cpp  vehicle_gateway_betaflight_main.cpp
vehicle_gateway_demo/: CMakeLists.txt  README.md  package.xml
vehicle_gateway_demo/config/: config.rviz  leader_follower_multicast_discovery.json  single_marker_tracker.yaml  two_vtols.yaml
vehicle_gateway_demo/launch/: px4_demo.launch.py
vehicle_gateway_demo/src/: altitude_control.cpp  aruco_demo.cpp  circles.cpp  follower.cpp  vtol_position_control.cpp
vehicle_gateway_integration_test/: CMakeLists.txt  package.xml
vehicle_gateway_integration_test/test/: CMakeLists.txt  test_arm_disarm.py  test_px4.py  test_px4_multirobot.py  test_takeoff_land.py
vehicle_gateway_integration_test/test/script/: arm_disarm.py  takeoff_land.py  takeoff_land_multirobot.py
vehicle_gateway_interfaces/: CMakeLists.txt  package.xml
vehicle_gateway_interfaces/action/: Land.action  Takeoff.action
vehicle_gateway_interfaces/msg/: BodyVelocitySetpoint.msg  PositionSetpoint.msg  WorldVelocitySetpoint.msg
vehicle_gateway_models/: CMakeLists.txt  package.xml
vehicle_gateway_multi/: CMakeLists.txt  README.md  package.xml
vehicle_gateway_multi/config/: zenoh_all_localhost.json5
vehicle_gateway_multi/src/: vehicle_gateway_multi_bridge.cpp  vehicle_gateway_multi_bridge_client.cpp
vehicle_gateway_px4/: CMakeLists.txt  package.xml  plugins.xml
vehicle_gateway_px4/include/vehicle_gateway_px4/: vehicle_gateway_px4.hpp
vehicle_gateway_px4/src/: vehicle_gateway_main.cpp  vehicle_gateway_px4.cpp
vehicle_gateway_python/: CMakeLists.txt  package.xml
vehicle_gateway_python/examples/: mc_fw_mc.py  mc_to_fw_to_mc.py  mc_to_fw_to_offboard.py  position_control.py  test_takeoff_land.py  velocity_control.py  vtol_body_rates.py  vtol_position_control.py
vehicle_gateway_python/examples/param_tuning_attempts/: 4004_gz_standard_vtol
vehicle_gateway_python/src/vehicle_gateway_python/: _vehicle_gateway_pybind11.cpp  destroyable.cpp  destroyable.hpp  exceptions.hpp  vehicle_gateway.cpp  vehicle_gateway.hpp
vehicle_gateway_python/vehicle_gateway/: __init__.py
vehicle_gateway_python/vehicle_gateway/impl/: __init__.py  implementation_singleton.py
vehicle_gateway_python_helpers/: package.xml  setup.cfg  setup.py
vehicle_gateway_sim_performance/: CMakeLists.txt  package.xml
vehicle_gateway_sim_performance/include/: linux_cpu_system_measurement.hpp  linux_memory_system_measurement.hpp
vehicle_gateway_sim_performance/script/: show_data.bash
vehicle_gateway_sim_performance/src/: linux_cpu_system_measurement.cpp  linux_memory_system_measurement.cpp  main.cpp  vtol_position_control.cpp
vehicle_gateway_sim_performance/test/: CMakeLists.txt  common.py  test_px4_multirobot.py  test_px4_multirobot_multiple_domain_id.py
vehicle_gateway_worlds/: CMakeLists.txt  README.md  package.xml
vehicle_gateway_worlds/config/: null_island_pads.yaml
vehicle_gateway_worlds/worlds/: aruco_px4_world.sdf  betaflight_iris_aruco.sdf  empty_px4_world.sdf  null_island.sdf
(+28 files in other folders)
