<?xml version="1.0"?>
<package format="2">
  <name>px4_sim</name>
  <version>0.0.0</version>
  <description>The px4 package</description>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez</maintainer>

  <license>Apache 2.0</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>qgroundcontrol</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>vehicle_gateway_python_helpers</exec_depend>
  <exec_depend>vehicle_gateway_models</exec_depend>
  <exec_depend>vehicle_gateway_worlds</exec_depend>

  <exec_depend>micro_ros_agent</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
