<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_gateway_multi</name>
  <version>0.0.0</version>
  <description>Multiple vehicle communications for Vehicle Gateway</description>
  <maintainer email="morgan@openrobotics.com">Morgan Quigley</maintainer>
  <license>Apache License 2.0</license>

  <author>Morgan Quigley</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nlohmann-json-dev</depend>
  <depend>px4_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>vehicle_gateway</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>zenohc</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
